--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <main class="hero" id="hero">
       <div class="content">
-        <h1>Drop a Thought</h1>
-        <p>The hero image refreshes every time you reload the page.</p>
-        <label for="user-text">Your text</label>
+        <h1>Schreib ein Gedanke</h1>
+        
+        
         <input
           id="user-text"
           type="text"
