--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main class="hero" id="hero">
       <div class="content">
-        <h1>Schreib einen Gedanken</h1>  
+        <h1>Schreib einen Gedanken auf</h1>  
         <input
           id="user-text"
           type="text"
